--- a/SocialWeave/Views/Post/CreatePost.cshtml
+++ b/SocialWeave/Views/Post/CreatePost.cshtml
@@ -4,15 +4,12 @@
 }
 
 <style>
-    .container {
-        margin-top: 100px;
-    }
 
-    .card {
-        border: none;
-        border-radius: 15px;
-        background: linear-gradient(135deg, #6a0dad, #000000);
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    .post {
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        padding: 20px;
+        margin-bottom: 0px;
     }
 
     .form-label {
@@ -26,6 +23,13 @@
         border-radius: 10px;
         padding: 12px;
         margin-bottom: 20px;
+    }
+
+    .custom-border {
+        width: 100%;
+        height: 2px;
+        background: linear-gradient(to right, #000080, #4B0082);
+        margin: 40px 0;
     }
 
         .form-control:focus {
@@ -48,10 +52,12 @@
     }
 </style>
 
+
 <div class="container">
+    <div class="custom-border" style="margin-top: 120px"></div>
     <div class="row justify-content-center">
         <div class="col-md-6">
-            <div class="card p-4">
+            <div class="post p-4">
                 <h2 class="text-center mb-4">@ViewData["Title"]</h2>
                 <form asp-action="CreatePost" asp-controller="Post" method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -61,10 +67,12 @@
                         <span asp-validation-for="Description" class="text-danger"></span>
                     </div>
                     <div class="text-center">
-                        <button type="submit" class="btn btn-outline-primary"><i class="bi bi-exposure"></i> Submit</button>
+                        <button type="submit" class="btn btn-outline-primary"><i class="bi bi-exposure me-2"></i>Add</button>
                     </div>
                 </form>
             </div>
         </div>
     </div>
+    <div class="custom-border"></div>
 </div>
+
