--- a/SocialWeave/Views/User/UserPage.cshtml
+++ b/SocialWeave/Views/User/UserPage.cshtml
@@ -15,7 +15,7 @@
     else
     {
         <div class="row">
-            <div class="col-md-12 text-center">
+            <div class="col-md-14 text-center">
                 <h2 class="info-text">Profile of @Model.User.Name</h2>
             </div>
         </div>
@@ -23,14 +23,12 @@
 </div>
 
 
-
 <div class="user-profile" style="display: flex; flex-direction: column; align-items: center;">
-    <h2>@Model.User.Name</h2>
     <div style="display: flex; align-items: center;">
         <div style="margin-right: 220px;">
             <h4 class="text-wrap">Admirers: @Model.CountAdmirer</h4>
         </div>
-        <div style="position: relative;">
+        <div style="margin-right: 30px">
             @if (Model.User.PictureProfile != null)
             {
                 <img src="data:image/png;base64,@(Convert.ToBase64String(Model.User.PictureProfile))" class="img-fluid rounded-circle" style="width: 200px; height: 200px; object-fit: cover;" />
@@ -229,14 +227,100 @@
                     </div>
                 </div>
             }
+            else
+            {
+                PostWithImage postImage = post as PostWithImage;
+                <div class="post" style="margin-bottom: 80px;">
+                    <div class="post-header">
+                        @if (Model.User.PictureProfile == null)
+                        {
+                            <div class="text-xxl-start">
+                                <button class="btn text-light" asp-action="UserPage" asp-controller="User"><h5><i class="bi bi-person-circle me-2"></i>@post.User.Name.CutName()</h5></button>
+                            </div>
+                        }
+                        else
+                        {
+                            <button class="btn text-light" asp-action="UserPage" asp-controller="User"><img src="data:image/png;base64,@(Convert.ToBase64String(post.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @post.User.Name.CutName()</button>
+                        }
+                        <div class="post-meta" style="margin-right: 20px">
+                            <p>@postImage.Date.Duration()</p>
+                        </div>
+                    </div>
+                    <div class="post-content text-xxl-center">
+                        <p>@postImage.Description.CutDescription()</p>
+                        <div class="post-content text-xxl-center">
+                            <img src="data:image/png;base64,@(Convert.ToBase64String(postImage.Image))" class="img-fluid" style="max-width: 100%; height: auto;" />
+                        </div>
+                    </div>
+                    <div class="post-content text-xxl-start">
+                        <div class="d-flex justify-content-between mb-3" style="margin-top: 20px;">
+                            <button class="btn btn-outline-primary toggle-comments" data-post-id="@postImage.Id"><i class="bi bi-chat-left-text"></i></button>
+                            <div class="d-flex flex-column">
+                                @if (postImage.Likes != null && postImage.Likes.Any(l => l.User.Name == User.Identity.Name))
+                                {
+                                    <form method="post" asp-action="Dislike" asp-route-id="@postImage.Id" asp-controller="Post" class="me-3">
+                                        <button class="text-xxl-end btn btn-purple" type="submit"><i class="bi bi-heart-fill text-danger"></i> <span class="m-0 text-danger">@postImage.Likes.CountLikes()</span></button>
+                                    </form>
+                                }
+                                else
+                                {
+                                    <form method="post" asp-action="Like" asp-route-id="@postImage.Id" asp-controller="Post" class="me-3">
+                                        <button type="submit" class="btn btn-purple"><i class="bi bi-heart text-danger"></i> <span class="m-0 text-danger">@postImage.Likes.CountLikes()</span></button>
+                                    </form>
+                                }
+                            </div>
+                        </div>
+                        <div class="text-xxl">
+                            <div class="post-comments" data-post-id="@postImage.Id" style="display: none;">
+                                <div class="comment">
+                                    <div class="custom-border"></div>
+                                    <p class="text-center text-primary">Comments</p>
+                                    <div class="custom-border"></div>
+                                    @if (postImage.Comments == null || !postImage.Comments.Any())
+                                    {
+                                        <h6 class="text-center">No exist comments in this post</h6>
+                                    }
+                                    else
+                                    {
+                                        <div class="text-center">
+                                            @foreach (var comment in postImage.Comments)
+                                            {
+                                                <div class="comment-container d-flex align-items-center mb-3">
+                                                    <div class="comment-details">
+                                                        <h9 class="text-primary d-inline-block"><i class="bi bi-person-circle mx-2 text-primary"></i>@comment.User.Name.CutName()</h9>
+                                                        <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
+                                                    </div>
+                                                    <div class="comment-like ms-auto">
+                                                        @if (comment.Likes != null && comment.Likes.Count() != 0 && postImage.Likes.Any(l => l.User.Name == User.Identity.Name))
+                                                        {
+                                                            <form method="post" asp-action="DislikeComment" asp-route-id="@comment.Id" asp-controller="Post">
+                                                                <button type="submit" class="btn btn-like-comment"><i class="bi bi-heart-fill text-danger"></i> <span class="m-0 text-danger">@comment.Likes.CountLikes()</span></button>
+                                                            </form>
+                                                        }
+                                                        else
+                                                        {
+                                                            <form method="post" asp-action="LikeComment" asp-route-id="@comment.Id" asp-controller="Post">
+                                                                <button type="submit" class="btn btn-like-comment"><i class="bi bi-heart text-danger"></i> <span class="m-0 text-danger">@comment.Likes.CountLikes()</span></button>
+                                                            </form>
+                                                        }
+                                                    </div>
+                                                </div>
+                                                <hr />
+                                            }
+                                        </div>
+                                    }
+                                    <a class="btn btn-outline-primary text-xxl-center mb-3" asp-route-id="@postImage.Id" asp-action="CreateComment" asp-controller="Post"><i class="bi bi-chat-left text-primary"></i> Add Comment</a>
+                                </div>
+                                <form class="add-comment-form" style="display: none;">
+                                    <input type="text" class="form-control mb-3" placeholder="Add a comment..." />
+                                    <button type="submit" class="btn btn-primary">Add</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            }
         }
-    </div>
-}
-else
-{
-    <div class="text-center">
-        <h4><strong>Login to access Social Weave</strong></h4>
-        <a class="nav-link" style="font-size: 18px; margin-right: 15px;" asp-area="" asp-controller="User" asp-action="Login"><i class="bi bi-box-arrow-in-right mx-2"></i>Login</a>
     </div>
 }
 
@@ -244,107 +328,9 @@ else
 @if (Model == null)
 {
     <div class="text-center">
-        <h4><strong>No new posts</strong></h4>
+        <h4><strong>No have posts!</strong></h4>
         <a asp-action="Index" asp-controller="Home"><i class="bi bi-arrow-clockwise"></i></a>
     </div>
-}
-
-
-@foreach (var post in Model.User.Posts)
-{
-    if (post is PostWithImage)
-    {
-        PostWithImage postImage = post as PostWithImage;
-        <div class="post" style="margin-bottom: 80px;">
-            <div class="post-header">
-                @if (Model.User.PictureProfile == null)
-                {
-                    <div class="text-xxl-start">
-                        <button class="btn text-light" asp-action="UserPage" asp-controller="User"><h5><i class="bi bi-person-circle me-2"></i>@post.User.Name.CutName()</h5></button>
-                    </div>
-                }
-                else
-                {
-                    <button class="btn text-light" asp-action="UserPage" asp-controller="User"><img src="data:image/png;base64,@(Convert.ToBase64String(post.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @post.User.Name.CutName()</button>
-                }
-                <div class="post-meta" style="margin-right: 20px">
-                    <p>@postImage.Date.Duration()</p>
-                </div>
-            </div>
-            <div class="post-content text-xxl-center">
-                <p>@postImage.Description.CutDescription()</p>
-                <div class="post-content text-xxl-center">
-                    <img src="data:image/png;base64,@(Convert.ToBase64String(postImage.Image))" class="img-fluid" style="max-width: 100%; height: auto;" />
-                </div>
-            </div>
-            <div class="post-content text-xxl-start">
-                <div class="d-flex justify-content-between mb-3" style="margin-top: 20px;">
-                    <button class="btn btn-outline-primary toggle-comments" data-post-id="@postImage.Id"><i class="bi bi-chat-left-text"></i></button>
-                    <div class="d-flex flex-column">
-                        @if (postImage.Likes != null && postImage.Likes.Any(l => l.User.Name == User.Identity.Name))
-                        {
-                            <form method="post" asp-action="Dislike" asp-route-id="@postImage.Id" asp-controller="Post" class="me-3">
-                                <button class="text-xxl-end btn btn-purple" type="submit"><i class="bi bi-heart-fill text-danger"></i> <span class="m-0 text-danger">@postImage.Likes.CountLikes()</span></button>
-                            </form>
-                        }
-                        else
-                        {
-                            <form method="post" asp-action="Like" asp-route-id="@postImage.Id" asp-controller="Post" class="me-3">
-                                <button type="submit" class="btn btn-purple"><i class="bi bi-heart text-danger"></i> <span class="m-0 text-danger">@postImage.Likes.CountLikes()</span></button>
-                            </form>
-                        }
-                    </div>
-                </div>
-                <div class="text-xxl">
-                    <div class="post-comments" data-post-id="@postImage.Id" style="display: none;">
-                        <div class="comment">
-                            <div class="custom-border"></div>
-                            <p class="text-center text-primary">Comments</p>
-                            <div class="custom-border"></div>
-                            @if (postImage.Comments == null || !postImage.Comments.Any())
-                            {
-                                <h6 class="text-center">No exist comments in this post</h6>
-                            }
-                            else
-                            {
-                                <div class="text-center">
-                                    @foreach (var comment in postImage.Comments)
-                                    {
-                                        <div class="comment-container d-flex align-items-center mb-3">
-                                            <div class="comment-details">
-                                                <h9 class="text-primary d-inline-block"><i class="bi bi-person-circle mx-2 text-primary"></i>@comment.User.Name.CutName()</h9>
-                                                <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
-                                            </div>
-                                            <div class="comment-like ms-auto">
-                                                @if (comment.Likes != null && comment.Likes.Count() != 0 && postImage.Likes.Any(l => l.User.Name == User.Identity.Name))
-                                                {
-                                                    <form method="post" asp-action="DislikeComment" asp-route-id="@comment.Id" asp-controller="Post">
-                                                        <button type="submit" class="btn btn-like-comment"><i class="bi bi-heart-fill text-danger"></i> <span class="m-0 text-danger">@comment.Likes.CountLikes()</span></button>
-                                                    </form>
-                                                }
-                                                else
-                                                {
-                                                    <form method="post" asp-action="LikeComment" asp-route-id="@comment.Id" asp-controller="Post">
-                                                        <button type="submit" class="btn btn-like-comment"><i class="bi bi-heart text-danger"></i> <span class="m-0 text-danger">@comment.Likes.CountLikes()</span></button>
-                                                    </form>
-                                                }
-                                            </div>
-                                        </div>
-                                        <hr />
-                                    }
-                                </div>
-                            }
-                            <a class="btn btn-outline-primary text-xxl-center mb-3" asp-route-id="@postImage.Id" asp-action="CreateComment" asp-controller="Post"><i class="bi bi-chat-left text-primary"></i> Add Comment</a>
-                        </div>
-                        <form class="add-comment-form" style="display: none;">
-                            <input type="text" class="form-control mb-3" placeholder="Add a comment..." />
-                            <button type="submit" class="btn btn-primary">Add</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    }
 }
 
 <style>
