Improved logic for adding scores based on comments, recommendation algorithm leaving the initial stage

--- a/SocialWeave/Views/Post/CreateComment.cshtml
+++ b/SocialWeave/Views/Post/CreateComment.cshtml
@@ -64,7 +64,7 @@
                         <span asp-validation-for="Text" class="text-danger"></span>
                     </div>
                     <div class="text-center">
-                        <button type="submit" class="btn btn-outline-primary"><i class="bi bi-exposure mx-2"></i>Submit</button>
+                        <button type="submit" class="btn btn-outline-primary"><i class="bi bi-exposure mx-2"></i>Comment</button>
                     </div>
                 </form>
             </div>
