Improved logic for showing posts in the index, and added a helper related to quantifying posts to be displayed in the index view

--- a/SocialWeave/Views/Home/Index.cshtml
+++ b/SocialWeave/Views/Home/Index.cshtml
@@ -244,6 +244,12 @@
             }
         }
         </div>
+        <div class="text-center text-light">
+            <form asp-controller="Home" asp-action="SetAmountOfPosts" method="post">
+                <input type="hidden" name="Amount" value="10" />
+                <button type="submit" class="btn text-light"><i class="bi bi-arrow-clockwise"></i>More posts</button>
+            </form>
+        </div>
     }
 }
 else
