--- a/SocialWeave/Views/Post/ChoosePostType.cshtml
+++ b/SocialWeave/Views/Post/ChoosePostType.cshtml
@@ -2,9 +2,20 @@
     ViewData["Title"] = "Choose the post type";
 }
 
+<style>
+    .info-text {
+       background: linear-gradient(to right, #000080, #4B0082);
+       -webkit-background-clip: text;
+       color: transparent;
+       padding: 10px 20px;
+       margin-bottom: 20px;
+       }
+</style>
+
+
 <div class="container" style="background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 1)); padding: 5rem; border-radius: 1rem;">
     <div class="mb-5 text-center">
-        <h2 class="text-uppercase text-light">@ViewData["Title"] <i class="bi bi-flower2 mx-2"></i></h2>
+        <div class="info-text"><h2 class="text-center mb-4">@ViewData["Title"]</h2></div>
     </div>
     <div class="d-flex justify-content-center">
         <div class="btn-group" role="group">
