--- a/SocialWeave/Views/Post/CreatePostImage.cshtml
+++ b/SocialWeave/Views/Post/CreatePostImage.cshtml
@@ -77,6 +77,14 @@
     #imagePreview {
         margin-top: 10px;
     }
+
+    .info-text {
+        background: linear-gradient(to right, #000080, #4B0082);
+        -webkit-background-clip: text;
+        color: transparent;
+        padding: 10px 20px;
+        margin-bottom: 20px;
+    }
 </style>
 
 <div class="container">
@@ -84,7 +92,7 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="post">
-                <h2 class="text-center mb-4">@ViewData["Title"]</h2>
+                <div class="info-text"><h2 class="text-center mb-4">@ViewData["Title"]</h2></div>
                 <form id="postForm" asp-action="CreatePostImage" asp-controller="Post" method="post" enctype="multipart/form-data">
                     <div class="mb-3">
                         <label asp-for="Description" class="form-label">Description:</label>
