--- a/SocialWeave/Views/User/UserPage.cshtml
+++ b/SocialWeave/Views/User/UserPage.cshtml
@@ -95,7 +95,6 @@
     }
     else
     {
-
         <div class="row">
             <div class="col-md-6">
                 <div class="description-birthdate-container">
@@ -122,7 +121,7 @@
 
 <div class="row">
     <div class="col-md-12 text-center">
-        <h2 class="info-text">Posts</h2>
+        <h2 class="info-text">@Model.User.Posts.Count() Posts</h2>
     </div>
 </div>
 
