--- a/SocialWeave/Views/Home/Index.cshtml
+++ b/SocialWeave/Views/Home/Index.cshtml
@@ -250,7 +250,7 @@
         <div class="text-center text-light">
             <form asp-controller="Home" asp-action="SetAmountOfPosts" method="post">
                 <input type="hidden" name="Amount" value="@amountOfPostsHelper.Amount" />
-                <button type="submit" class="btn text-light" id="more-posts-button"><i class="bi bi-arrow-clockwise"></i>More posts</button>
+                <button type="submit" class="btn text-primary" id="more-posts-button"><i class="bi bi-arrow-clockwise"></i>More posts</button>
             </form>
         </div>
     }
