Created user search logic

--- a/SocialWeave/Views/Shared/_Layout.cshtml
+++ b/SocialWeave/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                             </li>
 
                             <li class="nav-item my-auto">
-                                <a class="nav-link text-light" asp-area="" asp-controller="User" asp-action="UserPage">
+                                <a class="nav-link text-light" asp-area="" asp-controller="Search" asp-action="PageOfSearch">
                                     <strong><i class="bi bi-search"></i></strong>
                                 </a>
                             </li>
