Improved view about

--- a/SocialWeave/Views/Home/About.cshtml
+++ b/SocialWeave/Views/Home/About.cshtml
@@ -1,15 +1,32 @@
-﻿﻿<section id="showcase">
-    <div class="container">
-        <h1><strong>Social Weave</strong></h1>
-        <h9>
-            <strong>Hello, my name is Pedro and I am the developer of this application, it was developed in ASP.NET, it is a 100% functional application, it focuses on the back-end, the data is manipulated through the code-first workflow, and contains connection to SQLServer!</strong>
-        </h9>
-    </div>
-</section>
+﻿<div class="container">
+    <div class="info-text text-center"><h1><strong>Social Weave</strong></h1></div>
+    <p>
+        <strong>Hello, my name is Pedro and I am the developer of this application, it was developed in ASP.NET, it is a 100% functional application, it focuses on the back-end, the data is manipulated through the code-first workflow, and contains connection to SQLServer!</strong>
+    </p>
+</div>
+<div class="custom-border text-center"></div>
+<div class="info-text text-center"><h1><strong>Contact</strong></h1></div>
+<h8 class="text-center" style="margin-right: auto; margin-left: auto; display: block;">
+    <i class="bi bi-envelope mx-2"></i><strong>Email:</strong>
+    <a class="text-primary" href="mailto:devpedrohenri@gmail.com"><strong>devpedrohenri@gmail.com</strong></a>
+</h8>
+<h8 class="text-center" style="margin-right: auto; margin-left: auto; margin-top: 20px; display: block;">
+    <i class="bi bi-github mx-2"></i><strong>GitHub:</strong>
+    <a class="text-primary" href="https://github.com/PedroHenriqDev/-Social-Network-Asp-Net" target="_blank"><strong>PedroHenriqDev/Social-Network-Asp-Net</strong></a>
+</h8>
 
-<section class="container">
+<style>
+    .custom-border {
+        width: 100%;
+        height: 2px;
+        background: linear-gradient(to right, #000080, #4B0082);
+    }
 
-    <h2><strong>Contact</strong></h2>
-    <h8><i class="bi bi-envelope mx-2"></i><strong>Email:</strong> <a class="text-primary" href="mailto:devpedrohenri@gmail.com"><strong>devpedrohenri@gmail.com</strong></a></h8>
-    <h8><i class="bi bi-github mx-2"></i><strong>GitHub:</strong> <a class="text-primary" href="https://github.com/PedroHenriqDev/-Social-Network-Asp-Net" target="_blank"><strong>PedroHenriqDev/Social-Network-Asp-Net</strong></a></h8>
-</section>
+    .info-text {
+        background: linear-gradient(to right, #000080, #4B0082);
+        -webkit-background-clip: text;
+        color: transparent;
+        padding: 10px 20px;
+        margin-bottom: 20px;
+    }
+</style>
