--- a/SocialWeave/Views/User/UserPage.cshtml
+++ b/SocialWeave/Views/User/UserPage.cshtml
@@ -151,6 +151,9 @@
             if (post is PostWithoutImage)
             {
                 <div class="post" style="margin-bottom: 80px;">
+                    <div class="text-xxl-center">
+                            <button asp-action="Edit" asp-controller="Post" asp-route-id="@post.Id" class="btn">Edit</button>
+                    </div>
                     <div class="post-header">
                         @if (post.User.PictureProfile == null)
                         {
@@ -169,18 +172,7 @@
                         <div class="d-flex justify-content-between mb-3">
                             <button class="btn btn-outline-primary toggle-comments" data-post-id="@post.Id"><i class="bi bi-chat-left-text"></i></button>
                             <div class="d-flex flex-column">
-                                @if (post.Likes != null && post.Likes.Any(l => l.User.Name == User.Identity.Name))
-                                {
-                                    <form method="post" asp-action="Dislike" asp-route-id="@post.Id" asp-controller="Post" class="me-3">
-                                        <button class="text-xxl-end btn btn-purple" type="submit"><i class="bi bi-heart-fill text-danger"></i> <span class="m-0 text-danger">@post.Likes.CountLikes()</span></button>
-                                    </form>
-                                }
-                                else
-                                {
-                                    <form method="post" asp-action="Like" asp-route-id="@post.Id" asp-controller="Post" class="me-3">
-                                        <button type="submit" class="btn btn-purple"><i class="bi bi-heart text-danger"></i> <span class="m-0 text-danger">@post.Likes.CountLikes()</span></button>
-                                    </form>
-                                }
+                             
                             </div>
                         </div>
                         <div class="text-xxl">
@@ -200,8 +192,19 @@
                                             {
                                                 <div class="comment-container d-flex align-items-center mb-3">
                                                     <div class="comment-details">
-                                                        <h9 class="text-primary d-inline-block"><i class="bi bi-person-circle mx-2 text-primary"></i>@comment.User.Name.CutName()</h9>
-                                                        <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
+                                                        @if (comment.User.PictureProfile == null)
+                                                        {
+                                                            <h9 class="text-primary d-inline-block"><i class="bi bi-person-circle mx-2 text-primary"></i>@comment.User.Name.CutName()</h9>
+                                                            <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
+                                                        }
+                                                        else
+                                                        {
+                                                            <form asp-action="UserPageWithParams" asp-controller="User" method="get">
+                                                                <input type="hidden" name="name" value="@post.User.Name" />
+                                                                <button class="btn text-light"><img src="data:image/png;base64,@(Convert.ToBase64String(comment.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @post.User.Name.CutName():</button>
+                                                                <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
+                                                            </form>
+                                                        }
                                                     </div>
                                                     <div class="comment-like ms-auto">
                                                         @if (comment.Likes != null && comment.Likes.Count() != 0 && post.Likes.Any(l => l.User.Name == User.Identity.Name))
@@ -254,6 +257,7 @@
                                 <button class="btn text-light"><img src="data:image/png;base64,@(Convert.ToBase64String(postImage.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @post.User.Name.CutName()</button>
                             </form>
                         }
+
                         <div class="post-meta" style="margin-right: 20px">
                             <p>@postImage.Date.Duration()</p>
                         </div>
@@ -299,8 +303,20 @@
                                             {
                                                 <div class="comment-container d-flex align-items-center mb-3">
                                                     <div class="comment-details">
-                                                        <h9 class="text-primary d-inline-block"><i class="bi bi-person-circle mx-2 text-primary"></i>@comment.User.Name.CutName()</h9>
-                                                        <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
+                                                        @if (comment.User.PictureProfile == null)
+                                                        {
+                                                            <h9 class="text-primary d-inline-block"><i class="bi bi-person-circle mx-2 text-primary"></i>@comment.User.Name.CutName()</h9>
+                                                            <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
+
+                                                        }
+                                                        else
+                                                        {
+                                                            <form asp-action="UserPageWithParams" asp-controller="User" method="get">
+                                                                <input type="hidden" name="name" value="@post.User.Name" />
+                                                                <button class="btn text-light"><img src="data:image/png;base64,@(Convert.ToBase64String(comment.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @post.User.Name.CutName():</button>
+                                                                <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
+                                                            </form>
+                                                        }
                                                     </div>
                                                     <div class="comment-like ms-auto">
                                                         @if (comment.Likes != null && comment.Likes.Count() != 0 && postImage.Likes.Any(l => l.User.Name == User.Identity.Name))
