Implemented description editing logic

--- a/SocialWeave/Views/Search/PageOfSearch.cshtml
+++ b/SocialWeave/Views/Search/PageOfSearch.cshtml
@@ -87,7 +87,7 @@
 </style>
 
 <div class="container">
-    <h2 class="info-text text-center">Search Page</h2>
+    <h2 class="info-text text-center">Search</h2>
     <div class="custom-border"></div>
 
     <div class="search-box">
