--- a/SocialWeave/Views/Home/Index.cshtml
+++ b/SocialWeave/Views/Home/Index.cshtml
@@ -137,11 +137,10 @@
                                                             {
                                                                 <form asp-action="UserPageWithParams" asp-controller="User" method="get">
                                                                     <input type="hidden" name="name" value="@post.User.Name" />
-                                                                    <button class="btn text-light"><img src="data:image/png;base64,@(Convert.ToBase64String(comment.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @post.User.Name.CutName():</button>
+                                                                    <button class="btn text-light"><img src="data:image/png;base64,@(Convert.ToBase64String(comment.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @comment.User.Name.CutName():</button>
                                                                     <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
                                                                 </form>
                                                             }
-                                                            <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
                                                         </div>
                                                         <div class="comment-like ms-auto">
                                                             @if (comment.Likes != null && comment.Likes.Count() != 0 && post.Likes.Any(l => l.User.Name == User.Identity.Name))
@@ -246,11 +245,10 @@
                                                             {
                                                                 <form asp-action="UserPageWithParams" asp-controller="User" method="get">
                                                                     <input type="hidden" name="name" value="@post.User.Name" />
-                                                                    <button class="btn text-light"><img src="data:image/png;base64,@(Convert.ToBase64String(comment.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @post.User.Name.CutName():</button>
+                                                                    <button class="btn text-light"><img src="data:image/png;base64,@(Convert.ToBase64String(comment.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @comment.User.Name.CutName():</button>
                                                                     <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
                                                                 </form>
                                                             }
-                                                            <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
                                                         </div>
                                                         <div class="comment-like ms-auto">
                                                             @if (comment.Likes != null && comment.Likes.Count() != 0 && postImage.Likes.Any(l => l.User.Name == User.Identity.Name))
