--- a/SocialWeave/Views/Post/Edit.cshtml
+++ b/SocialWeave/Views/Post/Edit.cshtml
@@ -3,6 +3,9 @@
 @using SocialWeave.Extensions;
 @model Post;
 
+<h2 class="info-text text-center">Edit Post</h2>
+<div class="custom-border"></div>
+
 @if (Model is PostWithoutImage)
 {
     <div class="post" style="margin-bottom: 80px;">
@@ -28,7 +31,14 @@
             </div>
         </div>
         <div class="post-content text-xxl-center">
-            <p>@Model.Description.CutDescription()</p>
+            <div class="mb-3">
+                <form id="editForm" asp-action="Edit" asp-controller="Post" onsubmit="return false;">
+                    <label asp-for="Description" class="form-label">Description:</label>
+                    <input type="hidden" name="postId" value="@Model.Id" />
+                    <textarea id="descriptionInput" class="form-control bg-black text-light text-center" rows="5" asp-for="Description"></textarea>
+                    <span asp-validation-for="Description" class="text-danger"></span>
+                </form>
+            </div>
             <div class="d-flex justify-content-between mb-3">
                 <button class="btn btn-outline-primary toggle-comments" data-post-id="@Model.Id"><i class="bi bi-chat-left-text"></i></button>
                 <div class="d-flex flex-column">
@@ -63,8 +73,19 @@
                                 {
                                     <div class="comment-container d-flex align-items-center mb-3">
                                         <div class="comment-details">
-                                            <h9 class="text-primary d-inline-block"><i class="bi bi-person-circle mx-2 text-primary"></i>@comment.User.Name.CutName()</h9>
-                                            <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
+                                            @if (comment.User.PictureProfile == null)
+                                            {
+                                                <h9 class="text-primary d-inline-block"><i class="bi bi-person-circle mx-2 text-primary"></i>@comment.User.Name.CutName()</h9>
+                                                <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
+                                            }
+                                            else
+                                            {
+                                                <form asp-action="UserPageWithParams" asp-controller="User" method="get">
+                                                    <input type="hidden" name="name" value="@Model.User.Name" />
+                                                    <button class="btn text-light"><img src="data:image/png;base64,@(Convert.ToBase64String(comment.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @Model.User.Name.CutName():</button>
+                                                    <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
+                                                </form>
+                                            }
                                         </div>
                                         <div class="comment-like ms-auto">
                                             @if (comment.Likes != null && comment.Likes.Count() != 0 && Model.Likes.Any(l => l.User.Name == User.Identity.Name))
@@ -122,7 +143,14 @@ else
             </div>
         </div>
         <div class="post-content text-xxl-center">
-            <p>@postImage.Description.CutDescription()</p>
+            <div class="mb-3">
+                <form id="editForm" asp-action="Edit" asp-controller="Post" onsubmit="return false;">
+                    <label asp-for="Description" class="form-label">Description:</label>
+                    <input type="hidden" name="postId" value="@Model.Id" />
+                    <textarea id="descriptionInput" class="form-control bg-black text-light text-center" rows="5" asp-for="Description"></textarea>
+                    <span asp-validation-for="Description" class="text-danger"></span>
+                </form>
+            </div>
             <div class="post-content text-xxl-center">
                 <img src="data:image/png;base64,@(Convert.ToBase64String(postImage.Image))" class="img-fluid" style="max-width: 70%; height: auto;" />
             </div>
@@ -160,8 +188,19 @@ else
                                 {
                                     <div class="comment-container d-flex align-items-center mb-3">
                                         <div class="comment-details">
-                                            <h9 class="text-primary d-inline-block"><i class="bi bi-person-circle mx-2 text-primary"></i>@comment.User.Name.CutName()</h9>
-                                            <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
+                                            @if (comment.User.PictureProfile == null)
+                                            {
+                                                <h9 class="text-primary d-inline-block"><i class="bi bi-person-circle mx-2 text-primary"></i>@comment.User.Name.CutName()</h9>
+                                                <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
+                                            }
+                                            else
+                                            {
+                                                <form asp-action="UserPageWithParams" asp-controller="User" method="get">
+                                                    <input type="hidden" name="name" value="@Model.User.Name" />
+                                                    <button class="btn text-light"><img src="data:image/png;base64,@(Convert.ToBase64String(comment.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @comment.User.Name.CutName():</button>
+                                                    <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
+                                                </form>
+                                            }
                                         </div>
                                         <div class="comment-like ms-auto">
                                             @if (comment.Likes != null && comment.Likes.Count() != 0 && postImage.Likes.Any(l => l.User.Name == User.Identity.Name))
@@ -193,4 +232,69 @@ else
         </div>
     </div>
 }
+
+<style>
+    .custom-border {
+        width: 100%;
+        height: 2px;
+        background: linear-gradient(to right, #000080, #4B0082);
+        margin: 40px 0;
+    }
+
+    .info-text {
+        background: linear-gradient(to right, #000080, #4B0082);
+        -webkit-background-clip: text;
+        color: transparent;
+        padding: 10px 20px;
+        margin-bottom: 20px;
+    }
+
+    .post {
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        padding: 20px;
+        margin-bottom: 0px;
+    }
+
+    .post-header {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .btn-deep-dark {
+        background-color: #1a1a1a;
+        color: #ffffff;
+        border: 1px solid #ffffff;
+        border-radius: 4px;
+        padding: 10px 20px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+    }
+</style>
+
+@section Scripts {
+    <script>
+        document.querySelectorAll('.toggle-comments').forEach(btn => {
+            btn.addEventListener('click', () => {
+                const postId = btn.getAttribute('data-post-id');
+                const comments = document.querySelector(`.post-comments[data-post-id="${postId}"]`);
+                comments.style.display = comments.style.display === 'none' ? 'block' : 'none';
+            });
+        });
+
+        document.querySelectorAll('.btn-like-comment').forEach(btn => {
+            btn.addEventListener('click', (event) => {
+                event.stopPropagation();
+            });
+        });
+        document.getElementById('descriptionInput').addEventListener('keydown', function (event) {
+            if (event.keyCode === 13 && !event.shiftKey) { // 13 is the keycode for Enter
+                event.preventDefault(); // Prevent the default behavior (new line)
+                document.getElementById('editForm').submit(); // Submit the form
+            }
+        });
+    </script>
+}
+
+
 
